--- a/botsettings.json
+++ b/botsettings.json
@@ -1,5 +1,5 @@
 {
-    "token": "NjM3OTQxNDc4MzA3NTI4NzA0.Xb6WGw.fIzCVzXOA_HRvKZ-X2-XoPww_hY",
+    "token": "NjQxMDAwMzg0MzM2NDk0NjEy.XdC-tQ.W2xxFMmJISlHBlM5WTDo-XxmGQg",
     "prefix": "!",
     "dblapi": "dblapi"
 }
