--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-TOKEN:NjQxMDAwMzg0MzM2NDk0NjEy.XdC-tQ.W2xxFMmJISlHBlM5WTDo-XxmGQg
+token:NjQxMDAwMzg0MzM2NDk0NjEy.XdC-tQ.W2xxFMmJISlHBlM5WTDo-XxmGQg
