--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-token:NjQxMDAwMzg0MzM2NDk0NjEy.XdDI7g.9ASahTNA5ouFGDH-9wgBnyQBmBg
+token:NjQxMDAwMzg0MzM2NDk0NjEy.XdDJ1g.myo4t-5tevX23fyv0ulF7KOGqaI
