--- a/botsettings.json
+++ b/botsettings.json
@@ -1,5 +1,5 @@
 {
-    "token": "NjQxMDAwMzg0MzM2NDk0NjEy.XdC-tQ.W2xxFMmJISlHBlM5WTDo-XxmGQg",
+    "token": "NjQxMDAwMzg0MzM2NDk0NjEy.XdDKHg.EXPKrw1UQqJK3JJJU3I7ADSIa9E",
     "prefix": "!",
     "dblapi": "dblapi"
 }
