--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-token=NjQxMDAwMzg0MzM2NDk0NjEy.XdDJ1g.myo4t-5tevX23fyv0ulF7KOGqaI
+token=NjQ1NDgxODYyNjg0NDc1NDUy.XdDN6A.2wdRecdt_OUGlKA62tgzuvdh0A0
